# soundTransferTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: AudioCapture.cpp  AudioCapture.h  AudioEngine.cpp  AudioEngine.h  AudioFormat.h  AudioPlayback.cpp  AudioPlayback.h  CMakeLists.txt  OpusCodec.cpp  OpusCodec.h  UdpTransport.cpp  UdpTransport.h
tests/: CMakeLists.txt  TestSignal.h  tst_opuscodec.cpp  tst_transmission.cpp  tst_udptransport.cpp
